tests/invalid/simple/Assign_CompileFail_2.whiley
void f(int x):
     bool z
     z = x

